[tool.poetry]
name = "flaml_info"
version = "0.1.0"
description = ""
authors = ["yu-ololo <43878640+yu-ololo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.10"
flaml = "^1.1.1"
sklearn = "^0.0.post1"
matplotlib = "^3.6.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
